--- a/SmartHome/module/login/SHLoginController.xib
+++ b/SmartHome/module/login/SHLoginController.xib
@@ -54,7 +54,7 @@
                                     </constraints>
                                     <userDefinedRuntimeAttributes>
                                         <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
-                                            <real key="value" value="0.5"/>
+                                            <integer key="value" value="1"/>
                                         </userDefinedRuntimeAttribute>
                                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                             <integer key="value" value="5"/>
@@ -66,7 +66,7 @@
                                 </view>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fpo-nk-DiL">
                                     <rect key="frame" x="28" y="352" width="265" height="40"/>
-                                    <color key="backgroundColor" red="0.69411764710000001" green="0.81568627449999997" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="backgroundColor" red="0.27058823529999998" green="0.58823529409999997" blue="0.80784313730000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="40" id="h3r-H4-YlT"/>
                                     </constraints>
@@ -93,7 +93,7 @@
                                     </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                     <state key="normal" title="忘记密码？">
-                                        <color key="titleColor" red="0.69411764710000001" green="0.81568627449999997" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="titleColor" red="0.27058823529999998" green="0.58823529409999997" blue="0.80784313730000001" alpha="1" colorSpace="calibratedRGB"/>
                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                     </state>
                                     <connections>
@@ -112,26 +112,39 @@
                                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HuI-GD-pOF">
                                             <rect key="frame" x="36" y="5" width="226" height="30"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                            <textInputTraits key="textInputTraits"/>
+                                            <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                             <connections>
                                                 <outlet property="delegate" destination="-1" id="Dc9-jr-KXH"/>
                                             </connections>
                                         </textField>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i2z-CB-CTw">
+                                            <rect key="frame" x="240" y="16" width="17" height="7"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="17" id="Pbs-Up-E09"/>
+                                            </constraints>
+                                            <state key="normal" image="close.png"/>
+                                            <connections>
+                                                <action selector="showPassword:" destination="-1" eventType="touchUpInside" id="pOS-Yg-Rgk"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <constraints>
                                         <constraint firstAttribute="bottom" secondItem="VWP-2D-9s8" secondAttribute="bottom" constant="10" id="7Lz-Bm-Ffw"/>
                                         <constraint firstAttribute="bottom" secondItem="HuI-GD-pOF" secondAttribute="bottom" constant="5" id="CAM-uy-nrR"/>
+                                        <constraint firstAttribute="bottom" secondItem="i2z-CB-CTw" secondAttribute="bottom" constant="17" id="DDL-9j-uQo"/>
+                                        <constraint firstAttribute="trailing" secondItem="i2z-CB-CTw" secondAttribute="trailing" constant="8" id="JBa-Yn-FSN"/>
                                         <constraint firstItem="VWP-2D-9s8" firstAttribute="leading" secondItem="oZ1-zw-Vq2" secondAttribute="leading" constant="6" id="JNY-Oe-cQd"/>
                                         <constraint firstItem="VWP-2D-9s8" firstAttribute="top" secondItem="oZ1-zw-Vq2" secondAttribute="top" constant="10" id="JhE-kz-FAA"/>
                                         <constraint firstAttribute="trailing" secondItem="HuI-GD-pOF" secondAttribute="trailing" constant="3" id="Pkr-Uh-ejO"/>
                                         <constraint firstItem="HuI-GD-pOF" firstAttribute="leading" secondItem="VWP-2D-9s8" secondAttribute="trailing" constant="15" id="Rz3-Js-Kf7"/>
+                                        <constraint firstItem="i2z-CB-CTw" firstAttribute="top" secondItem="oZ1-zw-Vq2" secondAttribute="top" constant="16" id="bMI-WG-vvT"/>
                                         <constraint firstItem="HuI-GD-pOF" firstAttribute="top" secondItem="oZ1-zw-Vq2" secondAttribute="top" constant="5" id="xCa-pN-wwc"/>
                                         <constraint firstAttribute="height" constant="40" id="xMg-7K-wYD"/>
                                     </constraints>
                                     <userDefinedRuntimeAttributes>
                                         <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
-                                            <real key="value" value="0.5"/>
+                                            <integer key="value" value="1"/>
                                         </userDefinedRuntimeAttribute>
                                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                             <integer key="value" value="5"/>
@@ -148,20 +161,20 @@
                                         <constraint firstAttribute="height" constant="30" id="lEF-Hz-nZP"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                    <state key="normal" title="新用户注册">
-                                        <color key="titleColor" red="0.69411764710000001" green="0.81568627449999997" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    <state key="normal" title="立即注册 ">
+                                        <color key="titleColor" red="0.27058823529411763" green="0.58823529411764708" blue="0.80784313725490198" alpha="1" colorSpace="calibratedRGB"/>
                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                     </state>
                                     <connections>
                                         <action selector="registerClick:" destination="-1" eventType="touchUpInside" id="cwm-9B-w8Y"/>
                                     </connections>
                                 </button>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fhw-c0-Irw">
-                                    <rect key="frame" x="120" y="45" width="80" height="80"/>
-                                    <color key="backgroundColor" red="1" green="0.34554727369999999" blue="0.26045243569999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="qiu.png" translatesAutoresizingMaskIntoConstraints="NO" id="fhw-c0-Irw">
+                                    <rect key="frame" x="127.5" y="45" width="65" height="65"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     <constraints>
-                                        <constraint firstAttribute="width" constant="80" id="aOQ-q7-Z06"/>
-                                        <constraint firstAttribute="height" constant="80" id="jD2-KL-z3E"/>
+                                        <constraint firstAttribute="width" constant="65" id="aOQ-q7-Z06"/>
+                                        <constraint firstAttribute="height" constant="65" id="jD2-KL-z3E"/>
                                     </constraints>
                                     <userDefinedRuntimeAttributes>
                                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -169,10 +182,17 @@
                                         </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
                                 </imageView>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="JcI-TC-T8i">
+                                    <rect key="frame" x="95" y="123" width="130" height="15"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="130" id="l8v-jQ-Ot4"/>
+                                        <constraint firstAttribute="height" constant="15" id="nnV-te-JYM"/>
+                                    </constraints>
+                                </imageView>
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <constraints>
-                                <constraint firstItem="y4G-T3-FcI" firstAttribute="top" secondItem="fhw-c0-Irw" secondAttribute="bottom" constant="89" id="7JQ-XF-0BI"/>
+                                <constraint firstItem="y4G-T3-FcI" firstAttribute="top" secondItem="fhw-c0-Irw" secondAttribute="bottom" constant="104" id="7JQ-XF-0BI"/>
                                 <constraint firstAttribute="height" constant="568" id="7SW-JE-pa1"/>
                                 <constraint firstItem="fpo-nk-DiL" firstAttribute="top" secondItem="oZ1-zw-Vq2" secondAttribute="bottom" constant="37" id="ECh-SV-RNZ"/>
                                 <constraint firstItem="AlY-b1-Fph" firstAttribute="leading" secondItem="rj6-9Z-Wi3" secondAttribute="leading" constant="16" id="F2f-My-awF"/>
@@ -180,7 +200,9 @@
                                 <constraint firstAttribute="trailing" secondItem="y4G-T3-FcI" secondAttribute="trailing" constant="27" id="OD0-vM-UaZ"/>
                                 <constraint firstItem="y4G-T3-FcI" firstAttribute="leading" secondItem="rj6-9Z-Wi3" secondAttribute="leading" constant="28" id="Oe5-gn-3W5"/>
                                 <constraint firstItem="y4G-T3-FcI" firstAttribute="top" secondItem="rj6-9Z-Wi3" secondAttribute="top" constant="214" id="PHV-Q1-adB"/>
+                                <constraint firstItem="JcI-TC-T8i" firstAttribute="top" secondItem="fhw-c0-Irw" secondAttribute="bottom" constant="13" id="QCG-f6-Zhh"/>
                                 <constraint firstItem="fpo-nk-DiL" firstAttribute="leading" secondItem="rj6-9Z-Wi3" secondAttribute="leading" constant="28" id="Vcg-Im-h1b"/>
+                                <constraint firstItem="JcI-TC-T8i" firstAttribute="centerX" secondItem="rj6-9Z-Wi3" secondAttribute="centerX" id="dvN-Cq-SUL"/>
                                 <constraint firstItem="oZ1-zw-Vq2" firstAttribute="top" secondItem="y4G-T3-FcI" secondAttribute="bottom" constant="21" id="fVb-pU-rrF"/>
                                 <constraint firstAttribute="trailing" secondItem="gmd-yv-9J9" secondAttribute="trailing" constant="18" id="gEq-yq-Lgy"/>
                                 <constraint firstAttribute="centerX" secondItem="fhw-c0-Irw" secondAttribute="centerX" id="iB7-Kd-Xwn"/>
@@ -217,6 +239,9 @@
     </objects>
     <resources>
         <image name="acc_bg.png" width="44" height="57"/>
+        <image name="close.png" width="35" height="15"/>
+        <image name="logo.png" width="265" height="30"/>
         <image name="psw_bg.png" width="44" height="57"/>
+        <image name="qiu.png" width="132" height="131"/>
     </resources>
 </document>
