--- a/SmartHome/module/login/SHRegisterController.xib
+++ b/SmartHome/module/login/SHRegisterController.xib
@@ -7,9 +7,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SHRegisterController">
             <connections>
-                <outlet property="accountTextField" destination="NXf-YE-zah" id="Mfm-zl-ffp"/>
-                <outlet property="ensureTextField" destination="j8a-r3-x5y" id="Tet-g0-CUr"/>
-                <outlet property="passwordTextField" destination="o7T-nU-3XC" id="Zo1-cK-80O"/>
+                <outlet property="account" destination="NXf-YE-zah" id="bPV-vO-5IM"/>
+                <outlet property="phoneNumber" destination="o7T-nU-3XC" id="Bl7-H1-kYX"/>
+                <outlet property="verificationButton" destination="eaA-Hp-CqC" id="uel-uR-x9n"/>
+                <outlet property="verificationCode" destination="j8a-r3-x5y" id="PQS-e9-kvX"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -79,7 +80,7 @@
                                         </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
                                     <connections>
-                                        <action selector="registerClick:" destination="-1" eventType="touchUpInside" id="clS-YO-sBt"/>
+                                        <action selector="registerClick:" destination="-1" eventType="touchUpInside" id="8Ae-Gi-mZB"/>
                                     </connections>
                                 </button>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vOh-rM-1JG">
@@ -105,6 +106,9 @@
                                             <state key="normal" title="获取验证码">
                                                 <color key="titleColor" red="0.27058823529999998" green="0.58823529409999997" blue="0.80784313730000001" alpha="1" colorSpace="calibratedRGB"/>
                                             </state>
+                                            <connections>
+                                                <action selector="getVerificationCode:" destination="-1" eventType="touchUpInside" id="25c-kN-RyN"/>
+                                            </connections>
                                         </button>
                                     </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
