--- a/SmartHome/module/login/SHForgetPasswordController.xib
+++ b/SmartHome/module/login/SHForgetPasswordController.xib
@@ -7,6 +7,9 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SHForgetPasswordController">
             <connections>
+                <outlet property="phoneTextField" destination="uDq-wa-X4g" id="Xui-iq-0Nm"/>
+                <outlet property="verification" destination="C86-XX-O1p" id="Har-jD-b0E"/>
+                <outlet property="verificationButton" destination="QCB-d2-23v" id="nka-a2-fN9"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -14,8 +17,163 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cKN-mV-0Wb">
+                    <rect key="frame" x="0.0" y="-1" width="320" height="568"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V6k-5F-hvX">
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                            <subviews>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fi6-aQ-3Iy">
+                                    <rect key="frame" x="28" y="174" width="265" height="40"/>
+                                    <color key="backgroundColor" red="0.27058823529999998" green="0.58823529409999997" blue="0.80784313730000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="40" id="BvQ-Zs-8nZ"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                    <state key="normal" title="下一步">
+                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    </state>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                            <integer key="value" value="5"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
+                                    <connections>
+                                        <action selector="nextStep:" destination="-1" eventType="touchUpInside" id="72p-rn-Gg7"/>
+                                    </connections>
+                                </button>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E44-o6-Uwd">
+                                    <rect key="frame" x="28" y="107" width="265" height="40"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="psw_bg.png" translatesAutoresizingMaskIntoConstraints="NO" id="WZB-G6-mHz">
+                                            <rect key="frame" x="6" y="10" width="15" height="20"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="15" id="JOW-aK-yHz"/>
+                                            </constraints>
+                                        </imageView>
+                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入验证码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="C86-XX-O1p">
+                                            <rect key="frame" x="36" y="5" width="159" height="30"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits"/>
+                                        </textField>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QCB-d2-23v">
+                                            <rect key="frame" x="195" y="5" width="62" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="62" id="bru-5B-djX"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <state key="normal" title="获取验证码">
+                                                <color key="titleColor" red="0.27058823529999998" green="0.58823529409999997" blue="0.80784313730000001" alpha="1" colorSpace="calibratedRGB"/>
+                                            </state>
+                                            <connections>
+                                                <action selector="getVerificationCode:" destination="-1" eventType="touchUpInside" id="ezl-4D-Vsm"/>
+                                            </connections>
+                                        </button>
+                                    </subviews>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstItem="QCB-d2-23v" firstAttribute="leading" secondItem="C86-XX-O1p" secondAttribute="trailing" id="D4H-8K-4Pw"/>
+                                        <constraint firstAttribute="bottom" secondItem="QCB-d2-23v" secondAttribute="bottom" constant="5" id="Er4-L3-7Ab"/>
+                                        <constraint firstItem="WZB-G6-mHz" firstAttribute="leading" secondItem="E44-o6-Uwd" secondAttribute="leading" constant="6" id="OLK-M6-Y8P"/>
+                                        <constraint firstItem="WZB-G6-mHz" firstAttribute="top" secondItem="E44-o6-Uwd" secondAttribute="top" constant="10" id="Qb0-zr-YdI"/>
+                                        <constraint firstAttribute="bottom" secondItem="WZB-G6-mHz" secondAttribute="bottom" constant="10" id="WTV-78-HA0"/>
+                                        <constraint firstAttribute="bottom" secondItem="C86-XX-O1p" secondAttribute="bottom" constant="5" id="WnK-6A-Kdq"/>
+                                        <constraint firstItem="QCB-d2-23v" firstAttribute="top" secondItem="E44-o6-Uwd" secondAttribute="top" constant="5" id="ZDK-AD-jQa"/>
+                                        <constraint firstAttribute="height" constant="40" id="lDQ-6f-9fy"/>
+                                        <constraint firstAttribute="trailing" secondItem="QCB-d2-23v" secondAttribute="trailing" constant="8" id="p8f-L1-0hZ"/>
+                                        <constraint firstItem="C86-XX-O1p" firstAttribute="leading" secondItem="WZB-G6-mHz" secondAttribute="trailing" constant="15" id="sVf-Tc-Oy9"/>
+                                        <constraint firstItem="C86-XX-O1p" firstAttribute="top" secondItem="E44-o6-Uwd" secondAttribute="top" constant="5" id="xn3-CG-u8D"/>
+                                    </constraints>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
+                                            <integer key="value" value="1"/>
+                                        </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                            <integer key="value" value="5"/>
+                                        </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="color" keyPath="layer.borderColorFromUIColor">
+                                            <color key="value" red="0.92941176469999998" green="0.92941176469999998" blue="0.92941176469999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
+                                </view>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DFG-pH-AuT">
+                                    <rect key="frame" x="28" y="50" width="265" height="40"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="acc_bg.png" translatesAutoresizingMaskIntoConstraints="NO" id="rBM-oM-fd8">
+                                            <rect key="frame" x="6" y="10" width="15" height="20"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="15" id="0HD-8N-ufA"/>
+                                                <constraint firstAttribute="height" constant="20" id="R6y-iJ-AUn"/>
+                                            </constraints>
+                                        </imageView>
+                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入手机号" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uDq-wa-X4g">
+                                            <rect key="frame" x="36" y="5" width="226" height="30"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits"/>
+                                        </textField>
+                                    </subviews>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstItem="uDq-wa-X4g" firstAttribute="top" secondItem="DFG-pH-AuT" secondAttribute="top" constant="5" id="4kf-qI-YQC"/>
+                                        <constraint firstItem="uDq-wa-X4g" firstAttribute="leading" secondItem="rBM-oM-fd8" secondAttribute="trailing" constant="15" id="5bz-ah-qEO"/>
+                                        <constraint firstAttribute="bottom" secondItem="uDq-wa-X4g" secondAttribute="bottom" constant="5" id="JVP-Ma-ghh"/>
+                                        <constraint firstAttribute="height" constant="40" id="M27-gQ-Hxj"/>
+                                        <constraint firstItem="rBM-oM-fd8" firstAttribute="leading" secondItem="DFG-pH-AuT" secondAttribute="leading" constant="6" id="SZU-8H-w3R"/>
+                                        <constraint firstAttribute="trailing" secondItem="uDq-wa-X4g" secondAttribute="trailing" constant="3" id="oyf-qa-Fx7"/>
+                                        <constraint firstItem="rBM-oM-fd8" firstAttribute="top" secondItem="DFG-pH-AuT" secondAttribute="top" constant="10" id="w3I-Up-WAU"/>
+                                    </constraints>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
+                                            <integer key="value" value="1"/>
+                                        </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                            <integer key="value" value="5"/>
+                                        </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="color" keyPath="layer.borderColorFromUIColor">
+                                            <color key="value" red="0.92941176469999998" green="0.92941176469999998" blue="0.92941176469999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
+                                </view>
+                            </subviews>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstAttribute="trailing" secondItem="E44-o6-Uwd" secondAttribute="trailing" constant="27" id="24H-TK-mL4"/>
+                                <constraint firstItem="DFG-pH-AuT" firstAttribute="leading" secondItem="V6k-5F-hvX" secondAttribute="leading" constant="28" id="9lF-CY-P64"/>
+                                <constraint firstItem="fi6-aQ-3Iy" firstAttribute="top" secondItem="E44-o6-Uwd" secondAttribute="bottom" constant="27" id="PDS-7i-AhL"/>
+                                <constraint firstItem="DFG-pH-AuT" firstAttribute="top" secondItem="V6k-5F-hvX" secondAttribute="top" constant="50" id="eWI-6b-iTv"/>
+                                <constraint firstItem="E44-o6-Uwd" firstAttribute="leading" secondItem="V6k-5F-hvX" secondAttribute="leading" constant="28" id="nIk-NC-A5f"/>
+                                <constraint firstAttribute="trailing" secondItem="DFG-pH-AuT" secondAttribute="trailing" constant="27" id="sVl-FX-keB"/>
+                                <constraint firstItem="fi6-aQ-3Iy" firstAttribute="leading" secondItem="V6k-5F-hvX" secondAttribute="leading" constant="28" id="uTJ-Qv-xnq"/>
+                                <constraint firstAttribute="height" constant="568" id="vOb-qY-8N0"/>
+                                <constraint firstItem="E44-o6-Uwd" firstAttribute="top" secondItem="DFG-pH-AuT" secondAttribute="bottom" constant="17" id="xBN-kw-gc8"/>
+                                <constraint firstAttribute="trailing" secondItem="fi6-aQ-3Iy" secondAttribute="trailing" constant="27" id="yLn-6o-UZo"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="centerX" secondItem="V6k-5F-hvX" secondAttribute="centerX" id="D7N-qW-4Pk"/>
+                        <constraint firstItem="V6k-5F-hvX" firstAttribute="top" secondItem="cKN-mV-0Wb" secondAttribute="top" id="IGH-vp-9Md"/>
+                        <constraint firstAttribute="trailing" secondItem="V6k-5F-hvX" secondAttribute="trailing" id="sNb-04-j2d"/>
+                        <constraint firstAttribute="bottom" secondItem="V6k-5F-hvX" secondAttribute="bottom" id="urB-Xa-XS6"/>
+                        <constraint firstItem="V6k-5F-hvX" firstAttribute="leading" secondItem="cKN-mV-0Wb" secondAttribute="leading" id="xpm-yx-Tc5"/>
+                    </constraints>
+                </scrollView>
+            </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="cKN-mV-0Wb" secondAttribute="bottom" constant="1" id="VSV-S6-xnb"/>
+                <constraint firstItem="cKN-mV-0Wb" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="-1" id="cwp-fB-aHw"/>
+                <constraint firstItem="cKN-mV-0Wb" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="lzR-kX-ndN"/>
+                <constraint firstAttribute="trailing" secondItem="cKN-mV-0Wb" secondAttribute="trailing" id="qR8-k4-SYP"/>
+            </constraints>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
     </objects>
+    <resources>
+        <image name="acc_bg.png" width="44" height="57"/>
+        <image name="psw_bg.png" width="44" height="57"/>
+    </resources>
 </document>
